--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="chatbot-container">
+<div class="chatbot-container" #chatbotContainer (mousedown)="onMouseDown($event)">
   <div class="chatbot-header">
     <div class="chatbot-status">
       <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/55/01/99/55019965-3a65-6a67-92f2-b0dcce8aa89e/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/256x256bb.jpg" alt="Image de Leila" class="avatar-image">
